<resources>
    <string name="app_name">Ahorrapp</string>
    <string name="title_activity_maps">AhorrApp</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Nombre Producto</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_notifications</item>
    </string-array>

    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>

    <string name="Iniciar_sesion">Iniciar Sesion</string>
    <string name="Registrarse">Registrarse</string>
    <string name="Nombre_usuario">Nombre</string>
    <string name="contrasena">Contraseña</string>
    <string name="Recuperar_contraseña">Recuperar Contraseña</string>
    <string name="Buscar">Buscar</string>
    <string name="Nombre_producto">Nombre</string>
    <string name="Agregar_producto">Agregar</string>
    <string name="Precio_product">Precio</string>
    <string name="Dar_opinion">Da tu opinión</string>
    <string name="Coment">Comentar</string>
    <string name="Nombre_product">Nombre Producto</string>
    <string name="nombre_producto">producto</string>
    <string name="boton_agregar">Agregar</string>
    <string name="Editt_precio">Precio</string>
    <string name="editt_nombre">Nombre</string>
    <string name="boton_agregar2">Agregar</string>
    <string name="Rubro">Rubro</string>
    <string name="nombre_local">Nombre Local</string>
    <string name="filtro">Filtrar locales</string>
    <string name="distancia">Distancia</string>
    <string name="formulario_registro">Registrar nuevo local</string>
    <string name="registrar_local">Registrar</string>
    <string name="Nombre_local">Nombre</string>
    <string name="Descripcion_local">Descripcion</string>
    <string name="telefono_local">Telefono</string>
    <string name="Direccion_local">Direccion</string>
    <string name="Nombre_producto2">Nombre Producto</string>
    <string name="modificar_prod">Modificar</string>
    <string name="Eliminar_prod">Eliminar</string>
    <string name="Agregar_producto1">Agregar Producto</string>
    <string name="editar_producto">Editar Producto</string>
    <string name="ing_email">Ingrese su Email</string>
    <string name="nom_cuenta">Nombre de la cuenta</string>
    <string name="Email">Email</string>
    <string name="Pass">Contraseña</string>
    <string name="rep_pass">Repetir Contraseña</string>
    <string name="Registrar_Cuenta">Registrar Cuenta</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="rut_local">Rut Establecimiento</string>
    <string name="solicitar">Solicitar</string>
    <string name="Contacto">Contacto</string>
    <string name="comentarios">Comentarios</string>
    <string name="prods">Productos</string>

    <string-array name="inicio_sesion">
        <item>Iniciar Sesión</item>
        <item>Registrarse</item>
        <item>Recuperar Contraseña</item>
    </string-array>

    <string-array name="sesion_iniciada">
        <item>Darse de alta como dueño</item>
        <item>Perfil</item>
        <item>Cerrar sesión</item>
    </string-array>

    <string-array name="dueño_local">
        <item>Administrar local</item>
        <item>Perfil</item>
        <item>Cerrar Sesión</item>
    </string-array>

</resources>
