<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
    android:id="@+id/buscar_estab"
    android:icon="@drawable/ic_search_white_36dp"
    android:title="@string/app_name"
    app:showAsAction="ifRoom"/>

    <item android:id="@+id/texto"
        android:title="@string/filtro" />

    <group android:checkableBehavior="single">


        <item android:id="@+id/nombre_produto"
               android:title="@string/action_search"
               app:showAsAction="never"
               android:onClick="onCheckboxClicked" />

        <item android:id="@+id/Nombre_local"
            android:title="@string/nombre_local"
            app:showAsAction="never"
            android:onClick="onCheckboxClicked" />

        <item android:id="@+id/Rubro"
            android:title="@string/Rubro"
            app:showAsAction="never"
            android:onClick="onCheckboxClicked" />

    </group>

    <item android:id="@+id/Distancia"
        android:title="@string/distancia"
        app:actionViewClass="android.widget.CheckBox"
        android:checkable="true"
        app:showAsAction="never"
        android:onClick="onCheckboxClicked"  />

</menu>