<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/registrar_establecimiento"
    android:background="@mipmap/men_2"
    android:baselineAligned="false"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_local"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
    </android.support.v7.widget.Toolbar>

            <TextView
                style="@style/Textview"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:textSize="18sp"
                android:text="@string/formulario_registro"
                android:id="@+id/txtregistro_es"
                android:layout_gravity="center_horizontal" />

        <EditText
            style="@style/Edittext"
            android:inputType="textPersonName"
            android:id="@+id/txtNombreEstablecimiento"
            android:hint="@string/Nombre_local" />

        <EditText
            style="@style/Edittext"
            android:inputType="textPersonName"
            android:id="@+id/txtDescripcion"
            android:hint="@string/Descripcion_local" />

    <EditText
        style="@style/Edittext"
        android:inputType="phone"
        android:id="@+id/txtContacto"
        android:hint="@string/telefono_local" />

    <EditText
        style="@style/Edittext"
            android:id="@+id/txtDireccionEstablecimiento"
            android:hint="@string/Direccion_local" />
    <EditText
        style="@style/Edittext"
        android:inputType="textPersonName"
        android:id="@+id/txtRubro"
        android:hint="@string/Rubro" />


    <Button
            style="@style/Boton"
            android:layout_marginBottom="20dp"
            android:text="@string/registrar_local"
            android:id="@+id/btnGuardar_es" />

</LinearLayout>
