<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/men_2"
    android:weightSum="1"
    android:id="@+id/solicitar_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_local"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
    </android.support.v7.widget.Toolbar>

    <EditText
        style="@style/Edittext"
        android:inputType="textPersonName"
        android:id="@+id/txtNombrePropietario"
        android:hint="@string/nombre_completo"
        android:layout_width="226dp"
        android:layout_height="wrap_content" />

    <EditText
        style="@style/Edittext"
        android:inputType="phone"
        android:id="@+id/txtTelefono"
        android:hint="@string/telefono_local"
        android:layout_width="226dp"
        android:layout_height="wrap_content" />

    <EditText
        style="@style/Edittext"
        android:id="@+id/txtDEstableciemiento"
        android:hint="@string/Direccion_local"
        android:layout_width="226dp"
        android:layout_height="wrap_content" />
    <EditText
        style="@style/Edittext"
        android:inputType="textPersonName"
        android:id="@+id/txtRut"
        android:hint="@string/rut_local"
        android:layout_width="226dp"
        android:layout_height="wrap_content" />


    <EditText
        style="@style/Edittext"
        android:inputType="textEmailAddress"
        android:id="@+id/txtemail"
        android:hint="@string/Email"
        android:layout_width="227dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

    <Button
        style="@style/Boton"
        android:layout_marginBottom="20dp"
        android:text="@string/solicitar"
        android:id="@+id/btnSoliciud" />


</LinearLayout>